fixed overlapping stars on hero image

--- a/style.css
+++ b/style.css
@@ -378,14 +378,6 @@ h4 {
 	font-size: 18px;
 }
 
-#404-text {
-	color:black;
-	/*text-shadow:
-	-1px -1px 0 #fff,
-	1px -1px 0 #fff,
-	-1px 1px 0 #fff,
-	1px 1px 0 #fff;*/
-}
 
 /* Floating box container */
 
@@ -417,7 +409,6 @@ a:hover {
 	text-decoration: none;
 	color: black;
 }
-
 
 /* Page Background */
 .error404 {
